--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
 language: julia
+
+sudo: required
+
+services:
+  - docker
+
 os:
   - linux
-  - osx
+
 julia:
+  - 0.4
   - release
-  - nightly
+
 notifications:
   email: false
 # uncomment the following lines to override the default test script
